
ChangeLog
 [ + added, - removed, * changed ]
 * 13Feb2013 Removes duplicate creation of temporal files (MFB 2.3)
 * 13Feb2013 Actually Fixed SendRecv communication (refixes 06Feb2013) (MFB
               2.3)
 - 11Feb2013 Support for freq_table in pair with freqtable to determine
               whether to use the posix clock routines.
             Removed auto instrumentation of libpttrace anb libtrtrace because
               pthread_mutex was issued before starting and was not hooked
               (MF-tag-2.3.2)
 * 06Feb2013 Fixed SendRecv communication matching error (MF-tag-2.3.2)
 * 01Feb2013 Removed useless lib dependencies for MN3 (MF-tag-2.3.2)
 * 25Jan2013 Fixed configure checks to link with the spectral analysis toolkit
 + 25Jan2013 Added base code for on-line support
 * 24Jan2013 Extrae version 2.3.2
 * 24Jan2013 Fixed Paraver header generation when number of threads differs
               across tasks.
             Release resources (files and memory) as soon as pthreads terminate
               (only through pthread_exit() or pthread_join())
 + 14Jan2012 Extrae version 2.3.1
 * 14Jan2013 Fixed typo in MPI_Testall wrapper for Fortran
             Fixed error when generating .sym files. Now creating also local
             .sym files
             Fixed locating binutils package when --enable-shared is set
 * 03Jan2013 Added -lintl in some OSes
 * 18Dec2012 Added instrumentation for MPI_Testany/all/some
             Fixed issues when renaming *.ttmp into *.mpit tracefiles for MPI apps
 * 14Dec2012 Fixed bug in the generation of the ROW file, where the threads appeared disordered.
 * 05Dec2012 Fixed problems with trace names when using omp_set_num_threads
     with OmpSs.
     Added -lb libraries to nanos+mpi.
 +`04Dec2012 Added libz to dependencies when generating the shared libraries
 * 13Nov2012 Added checks for the C++ compiler only when it is required by 
   other functionalities like Dyninst or MRNet. Updated documentation.