@@ -1,8 +1,10 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 14Feb2013 Removes all temporal files at the end of the merge process (MFB
+               2.3)
  * 13Feb2013 Removes duplicate creation of temporal files (MFB 2.3)
- * 13Feb2013 Actually Fixed SendRecv communication (refixes 06Feb2013) (MFB
+             Actually Fixed SendRecv communication (refixes 06Feb2013) (MFB
                2.3)
  - 11Feb2013 Support for freq_table in pair with freqtable to determine
                whether to use the posix clock routines.
